# fuzzy-time-series

./: .gitignore  .gitmodules  CMakeLists.txt  SP500.csv  out.txt  parameters.txt  parameters_iris.txt  parameters_pigs.txt  parameters_sp500.txt  pigs.conf  pigs_prep.csv  pigs_rule_1.txt  run_all.ps1  run_all.sh  run_for_params.sh  stats.py  test.py
conf/: SP500.conf  SP500.conf.json  SP500_price.conf  SP500_price.conf.json  btcusd_6h.conf  btcusd_6h.conf.json  enrollment.conf  enrollment.conf.json  iotusd.conf  iotusd.conf.json  iris.conf  iris.conf.json  ohlc_bitfinex_btcusd_180.conf  ohlc_bitfinex_btcusd_180.conf.json  ohlc_bitfinex_btcusd_21600.conf  ohlc_bitfinex_btcusd_21600.conf.json  ohlc_bitfinex_btcusd_300.conf  ohlc_bitfinex_btcusd_300.conf.json  ohlc_bitfinex_btcusd_60.conf  ohlc_bitfinex_btcusd_60.conf.json  ohlc_bitfinex_btcusd_86400.conf  ohlc_bitfinex_btcusd_86400.conf.json  ohlc_bitfinex_ethusd_180.conf  ohlc_bitfinex_ethusd_180.conf.json  ohlc_bitfinex_ethusd_21600.conf  ohlc_bitfinex_ethusd_21600.conf.json  ohlc_bitfinex_ethusd_300.conf  ohlc_bitfinex_ethusd_300.conf.json  ohlc_bitfinex_ethusd_60.conf  ohlc_bitfinex_ethusd_60.conf.json  ohlc_bitfinex_ethusd_86400.conf  ohlc_bitfinex_ethusd_86400.conf.json  ohlc_bitfinex_iotusd_180.conf  ohlc_bitfinex_iotusd_180.conf.json  ohlc_bitfinex_iotusd_21600.conf  ohlc_bitfinex_iotusd_21600.conf.json  ohlc_bitfinex_iotusd_300.conf  ohlc_bitfinex_iotusd_300.conf.json  ohlc_bitfinex_iotusd_60.conf  ohlc_bitfinex_iotusd_60.conf.json  (+54 more)
data/: SP500_prep.csv  SP500_prep_price.csv  convert.py  enrollment.csv  enrollment_norm.csv  pigs_perc.csv  pigs_prep.csv
lib/ECF/examples/GAonemax/: CMakeLists.txt  OneMaxEvalOp.cpp  main.cpp  parameters.txt
lib/ECF/examples/GAonemax/VS/: GAOneMax.vcproj  GAOneMax.vcxproj  GAOneMax_2005.sln
log/: ohlc_bitfinex_btcusd_180.csv  ohlc_bitfinex_btcusd_21600_10_100_0.9_0.7.csv  ohlc_bitfinex_btcusd_60.csv  ohlc_bitfinex_btcusd_86400_10_100_0.9_0.7.csv  ohlc_bitfinex_ethusd_21600_10_100_0.9_0.7.csv  ohlc_bitfinex_ethusd_86400_10_100_0.9_0.7.csv  ohlc_bitfinex_iotusd_21600_10_100_0.9_0.7.csv  ohlc_bitfinex_iotusd_86400_10_100_0.2_0.7.csv  ohlc_bitfinex_iotusd_86400_10_100_0.2_0.8.csv  ohlc_bitfinex_iotusd_86400_10_100_0.2_0.9.csv  ohlc_bitfinex_iotusd_86400_10_100_0.5_0.7.csv  ohlc_bitfinex_iotusd_86400_10_100_0.5_0.8.csv  ohlc_bitfinex_iotusd_86400_10_100_0.5_0.9.csv  ohlc_bitfinex_iotusd_86400_10_100_0.9_0.7.csv  ohlc_bitfinex_iotusd_86400_10_100_0.9_0.8.csv  ohlc_bitfinex_iotusd_86400_10_100_0.9_0.9.csv  ohlc_bitfinex_iotusd_86400_10_250_0.2_0.7.csv  ohlc_bitfinex_iotusd_86400_10_250_0.2_0.8.csv  ohlc_bitfinex_iotusd_86400_10_250_0.2_0.9.csv  ohlc_bitfinex_iotusd_86400_10_250_0.5_0.7.csv  ohlc_bitfinex_iotusd_86400_10_250_0.5_0.8.csv  ohlc_bitfinex_iotusd_86400_10_250_0.5_0.9.csv  ohlc_bitfinex_iotusd_86400_10_250_0.9_0.7.csv  ohlc_bitfinex_iotusd_86400_10_250_0.9_0.8.csv  ohlc_bitfinex_iotusd_86400_10_250_0.9_0.9.csv  ohlc_bitfinex_iotusd_86400_10_30_0.2_0.7.csv  ohlc_bitfinex_iotusd_86400_10_30_0.2_0.8.csv  ohlc_bitfinex_iotusd_86400_10_30_0.2_0.9.csv  ohlc_bitfinex_iotusd_86400_10_30_0.5_0.7.csv  ohlc_bitfinex_iotusd_86400_10_30_0.5_0.8.csv  ohlc_bitfinex_iotusd_86400_10_30_0.5_0.9.csv  ohlc_bitfinex_iotusd_86400_10_30_0.9_0.7.csv  ohlc_bitfinex_iotusd_86400_10_30_0.9_0.8.csv  ohlc_bitfinex_iotusd_86400_10_30_0.9_0.9.csv  ohlc_bitfinex_ltcusd_21600_10_100_0.9_0.7.csv  ohlc_bitfinex_ltcusd_86400_10_100_0.9_0.7.csv  ohlc_bitfinex_omgusd_21600_10_100_0.9_0.7.csv  ohlc_bitfinex_omgusd_86400_10_100_0.9_0.7.csv  ohlc_bitfinex_xmrusd_21600_10_100_0.9_0.7.csv  ohlc_bitfinex_xmrusd_86400_10_100_0.9_0.7.csv  (+4 more)
milestones/: iris_10.txt  iris_20.txt  iris_3.txt  iris_6.txt  ohlc_bitfinex_btcusd_21600_10_100_0.9_0.7.txt  ohlc_bitfinex_btcusd_86400_10_100_0.9_0.7.txt  ohlc_bitfinex_ethusd_21600_10_100_0.9_0.7.txt  ohlc_bitfinex_ethusd_86400_10_100_0.9_0.7.txt  ohlc_bitfinex_iotusd_21600_10_100_0.9_0.7.txt  ohlc_bitfinex_iotusd_86400_10_100_0.2_0.7.txt  ohlc_bitfinex_iotusd_86400_10_100_0.2_0.8.txt  ohlc_bitfinex_iotusd_86400_10_100_0.2_0.9.txt  ohlc_bitfinex_iotusd_86400_10_100_0.5_0.7.txt  ohlc_bitfinex_iotusd_86400_10_100_0.5_0.8.txt  ohlc_bitfinex_iotusd_86400_10_100_0.5_0.9.txt  ohlc_bitfinex_iotusd_86400_10_100_0.9_0.7.txt  ohlc_bitfinex_iotusd_86400_10_100_0.9_0.8.txt  ohlc_bitfinex_iotusd_86400_10_100_0.9_0.9.txt  ohlc_bitfinex_iotusd_86400_10_250_0.2_0.7.txt  ohlc_bitfinex_iotusd_86400_10_250_0.2_0.8.txt  ohlc_bitfinex_iotusd_86400_10_250_0.2_0.9.txt  ohlc_bitfinex_iotusd_86400_10_250_0.5_0.7.txt  ohlc_bitfinex_iotusd_86400_10_250_0.5_0.8.txt  ohlc_bitfinex_iotusd_86400_10_250_0.5_0.9.txt  ohlc_bitfinex_iotusd_86400_10_250_0.9_0.7.txt  ohlc_bitfinex_iotusd_86400_10_250_0.9_0.8.txt  ohlc_bitfinex_iotusd_86400_10_250_0.9_0.9.txt  ohlc_bitfinex_iotusd_86400_10_30_0.2_0.7.txt  ohlc_bitfinex_iotusd_86400_10_30_0.2_0.8.txt  ohlc_bitfinex_iotusd_86400_10_30_0.2_0.9.txt  ohlc_bitfinex_iotusd_86400_10_30_0.5_0.7.txt  ohlc_bitfinex_iotusd_86400_10_30_0.5_0.8.txt  ohlc_bitfinex_iotusd_86400_10_30_0.5_0.9.txt  ohlc_bitfinex_iotusd_86400_10_30_0.9_0.7.txt  ohlc_bitfinex_iotusd_86400_10_30_0.9_0.8.txt  ohlc_bitfinex_iotusd_86400_10_30_0.9_0.9.txt  ohlc_bitfinex_ltcusd_21600_10_100_0.9_0.7.txt  ohlc_bitfinex_ltcusd_86400_10_100_0.9_0.7.txt  ohlc_bitfinex_omgusd_21600_10_100_0.9_0.7.txt  ohlc_bitfinex_omgusd_86400_10_100_0.9_0.7.txt  (+9 more)
parameters/: parameters_anfis.txt  parameters_btc_6h.txt  parameters_iris.txt  parameters_ohlc_bitfinex_btcusd_180_100_0.2.txt  parameters_ohlc_bitfinex_btcusd_180_100_0.5.txt  parameters_ohlc_bitfinex_btcusd_180_100_0.9.txt  parameters_ohlc_bitfinex_btcusd_180_10_100_0.2_0.7.txt  parameters_ohlc_bitfinex_btcusd_180_10_100_0.2_0.8.txt  parameters_ohlc_bitfinex_btcusd_180_10_100_0.2_0.9.txt  parameters_ohlc_bitfinex_btcusd_180_10_100_0.5_0.7.txt  parameters_ohlc_bitfinex_btcusd_180_10_100_0.5_0.8.txt  parameters_ohlc_bitfinex_btcusd_180_10_100_0.5_0.9.txt  parameters_ohlc_bitfinex_btcusd_180_10_100_0.9_0.7.txt  parameters_ohlc_bitfinex_btcusd_180_10_100_0.9_0.8.txt  (+2656 more)
src/: FTSEvalOp.h  (+17 more)
(+384 files in other folders)
